feat: implement effective user permissions